Fix contrast for blue color link on landing page

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -27,3 +27,7 @@
 .Link {
     font-size: 1.2rem;
 }
+
+.Link a {
+    color: #2142b2;
+}
